--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -18,6 +18,10 @@ body {
     padding: 0;
 }
 
+.wrapper {
+    min-height: 100vh;
+}
+
 a {
     display: inline-block;
     text-decoration: none;
@@ -54,6 +58,13 @@ h2 {
     letter-spacing: -0.02em;
 }
 
+h3 {
+    font-weight: 300;
+    font-size: 44px;
+    line-height: 56px;
+    letter-spacing: -0.02em;
+}
+
 p {
     margin: 0;
 }
@@ -71,6 +82,10 @@ body {
     line-height: 28px;
     color: #fff;
     min-width: 320px;
+}
+
+.section.fp-section.fp-table.fp-completely {
+    height: 100vh;
 }
 
 .container {
@@ -100,7 +115,7 @@ body {
         justify-content: space-between;
     }
     .logo {
-        margin: 18px 99px 17px 0;
+        margin: 36px 99px 0 0;
     }
     &__menu-item {
         margin: 36px 0;
@@ -132,6 +147,20 @@ body {
     }
 }
 
+.menu-btn {
+    display: none;
+    width: 30px;
+    margin-top: 32px;
+    &__line {
+        height: 2px;
+        width: 30px;
+        background: #fff;
+        &+& {
+            margin-top: 5px;
+        }
+    }
+}
+
 .call-btn {
     background: transparent;
     border: 2px solid #fff;
@@ -146,6 +175,49 @@ body {
     }
 }
 
+#call-me-modal {
+    max-width: 792px;
+    width: 100%;
+    padding: 80px 84px 60px;
+    background: #2E2E2E;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    .close-modal {
+        position: absolute;
+        top: 50px;
+        right: 40px;
+        background-image: url('../images/close-modal.svg');
+        width: 24px;
+        height: 24px;
+    }
+}
+
+#success-modal {
+    max-width: 792px;
+    width: 100%;
+    padding: 64px 193px;
+    background: #2E2E2E;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    .close-modal {
+        position: absolute;
+        top: 50px;
+        right: 40px;
+        background-image: url('../images/close-modal.svg');
+        width: 24px;
+        height: 24px;
+    }
+    .success-modal__title {
+        margin-bottom: 24px;
+    }
+    .success-modal__text {
+        margin-bottom: 80px;
+    }
+}
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -153,6 +225,9 @@ body {
     right: 0;
     z-index: 5;
     background: #333;
+    &.footer-catalog {
+        position: relative;
+    }
     &__inner {
         display: flex;
         flex-wrap: wrap;
@@ -170,7 +245,7 @@ body {
             display: block;
         }
         & .logo {
-            margin-bottom: 29px;
+            margin-bottom: 9px;
         }
     }
     .confidentiality {
