--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper {
-    min-height: 100vh;
+    height: auto;
 }
 
 a {
@@ -225,38 +225,53 @@ body {
     right: 0;
     z-index: 5;
     background: #333;
-    &.footer-catalog {
+    a {
+        display: block;
+    }
+    &.footer__catalog,
+    &.footer__about-us,
+    &.footer__contacts,
+    &.footer__partners {
         position: relative;
     }
     &__inner {
         display: flex;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         align-items: center;
     }
     &__left {
         display: flex;
         align-items: center;
-        margin-right: 140px;
+        max-width: 615px;
+        width: 100%;
+        margin-right: 20px;
     }
     &__logo-box {
         padding: 25px 0 22px;
-        margin-right: 75px;
-        a {
-            display: block;
-        }
+        max-width: 227px;
+        width: 100%;
+        margin-right: 20px;
         & .logo {
             margin-bottom: 9px;
         }
     }
     .confidentiality {
         color: #828282;
+        min-width: 249px;
     }
     &__center {
-        margin-right: 100px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: 20px;
+        max-width: 550px;
+        width: 100%;
     }
     &__link-tel {
         padding-left: 37px;
-        margin-right: 75px;
+        max-width: 243px;
+        width: 100%;
+        margin-right: 20px;
         position: relative;
         &::before {
             content: '';
@@ -275,6 +290,7 @@ body {
     &__link-email {
         padding-left: 37px;
         position: relative;
+        margin-right: 20px;
         &::before {
             content: '';
             position: absolute;
@@ -289,10 +305,21 @@ body {
             }
         }
     }
+    &__right {
+        display: flex;
+        align-items: center;
+        max-width: 150px;
+        width: 100%;
+    }
     &__link-vk {
         margin-right: 30px;
+        height: 20px;
     }
     &__link-insta {
-        margin-right: 64px;
+        margin-right: 30px;
+        height: 25px;
+    }
+    .call-btn {
+        min-width: 253px;
     }
 }
