--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -426,6 +426,7 @@
       &-list {
           max-width: 792px;
           width: 100%;
+          margin-right: 50px;
       }
       &-list__item-drop {
           position: relative;
@@ -521,6 +522,220 @@
           height: 1px;
           width: 100%;
           background: #4F4F4F;
+      }
+  }
+  
+  .page-404 {
+      background: radial-gradient(107.08% 254.73% at 0% 1.34%, #484848 0%, #0F0F0F 100%);
+      text-align: center;
+      .logo {
+          padding-top: 36px;
+          margin-bottom: 148px;
+      }
+      &__title {
+          font-weight: 200;
+          font-size: 292px;
+          line-height: 292px;
+          letter-spacing: -0.03em;
+      }
+      &__text {
+          margin-bottom: 48px;
+      }
+      &__btn {
+          margin-bottom: 313px;
+      }
+  }
+  
+  .partners {
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/partners-bg.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      &__inner {
+          padding-top: 164px;
+          padding-bottom: 172px;
+      }
+      &__title {
+          margin-bottom: 64px;
+      }
+      &__wrapper {
+          display: flex;
+      }
+      &__item {
+          max-width: 384px;
+          width: 100%;
+          min-height: 264px;
+          border: 1px solid #fff;
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          justify-content: space-evenly;
+          margin-bottom: 24px;
+          transition: all .3s;
+      }
+      &__item+&__item {
+          margin-left: 24px;
+      }
+      &__item:hover {
+          background: rgba(#fff, .6);
+          .partners__item-title {
+              color: #333;
+          }
+      }
+  }
+  
+  .about-us {
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/partners-bg.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      &__inner-page {
+          padding-top: 164px;
+          padding-bottom: 131px;
+      }
+      &__title {
+          margin-bottom: 64px;
+      }
+      &__wrapper {
+          display: flex;
+      }
+      &__item {
+          max-width: 384px;
+          width: 100%;
+          min-height: 264px;
+          border: 1px solid #fff;
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          justify-content: space-evenly;
+          margin-bottom: 24px;
+          transition: all .3s;
+      }
+      &__item+&__item {
+          margin-left: 24px;
+      }
+      &__item:hover {
+          background: rgba(#fff, .6);
+          .partners__item-title {
+              color: #333;
+          }
+      }
+      &__item-text {
+          margin: 0 48px;
+      }
+  }
+  
+  .contacts {
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/contacts-bg.jpg');
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      &__inner {
+          padding-top: 164px;
+          padding-bottom: 131px;
+      }
+      &__title {
+          margin-bottom: 64px;
+      }
+      &__wrapper {
+          display: flex;
+      }
+      &__form {
+          max-width: 620px;
+          width: 100%;
+      }
+      &__form-title {
+          margin-bottom: 48px;
+      }
+  }
+  
+  .contacts-box {
+      max-width: 520px;
+      width: 100%;
+      border: 1px solid #fff;
+      margin-right: 195px;
+      &__contacts {
+          padding: 40px 32px 48px;
+          border-bottom: 1px solid #fff;
+      }
+      &__item {
+          display: block;
+          padding-left: 39px;
+          position: relative;
+      }
+      &__item+&__item {
+          margin-top: 24px;
+      }
+      &__link-tel::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          background-image: url('../images/phone-call.svg');
+          width: 23px;
+          height: 23px;
+      }
+      &__link-email::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 3px;
+          background-image: url('../images/mail.svg');
+          width: 21px;
+          height: 17px;
+      }
+      &__adres::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 3px;
+          background-image: url('../images/map-pin.svg');
+          width: 21px;
+          height: 24px;
+      }
+      &__social {
+          padding: 48px 32px 40px;
+      }
+      &__social-title {
+          font-weight: 400;
+          font-size: 24px;
+          line-height: 36px;
+          margin-bottom: 32px;
+      }
+      &__link-vk {
+          display: block;
+          padding-left: 50px;
+          margin-bottom: 32px;
+          position: relative;
+      }
+      &__link-vk::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 5px;
+          background-image: url('../images/icon-vk.svg');
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;
+          width: 27px;
+          height: 16px;
+      }
+      &__link-insta {
+          display: block;
+          padding-left: 50px;
+          position: relative;
+      }
+      &__link-insta::before {
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 0;
+          background-image: url('../images/icon-insta.svg');
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;
+          width: 25px;
+          height: 25px;
       }
   }
   
